--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "@pwnednomore/contracts": "../contracts",
+    "@pwnednomore/contracts": "0.2.2",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
