--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,10 @@
-[submodule "lib/pnm-contracts"]
-	path = lib/pnm-contracts
-	url = https://github.com/pwnednomore/pnm-contracts
+[submodule "lib/narya-contracts"]
+	path = lib/narya-contracts
+	url = https://github.com/naryaai/narya-contracts
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+	branch = v1.1.1
